# metadsf

./: AUTHORS  Makefile  Makefile.in  NEWS  README  README.md  aclocal.m4  configure  configure.ac  dsffile.h  dsfheader.cpp  dsfproperties.h  main.cpp  metadsf.cpp  metadsf.h  options.cpp  options.h  test.cpp  usage.h  usage.txt  utils.cpp  utils.h
src/: Makefile  Makefile.am  Makefile.in  dsffile.cpp  dsffile.h  dsfheader.cpp  dsfheader.h  dsfproperties.cpp  dsfproperties.h  main.cpp  metadsf  metadsf.cpp  metadsf.h  mkdsf.cpp  optionparser.h  options.cpp  options.h  typedefs.h  utils.cpp  utils.h
