AUTOMAKE_OPTIONS = foreign
ACLOCAL_AMFLAGS = -I /Users/gordonlo/dev/m4
AM_CXXFLAGS=-Wall -I/usr/local/include -DVERSION=\"$(VERSION)\" -DPROG="\"$(PACKAGE)\""
AM_LDFLAGS=-L/usr/local/lib -ltag -lz
bin_PROGRAMS = metadsf
metadsf_SOURCES = dsffile.cpp dsfheader.cpp dsfproperties.cpp main.cpp metadsf.cpp options.cpp utils.cpp
